# goit-pythonweb-hw-12

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1995836753af_init.py  3da2ecba51ba_create_users_table.py  863fe7bfc4e0_create_users_table.py
src/: schemas.py
src/api/: admin_panel.py  auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_repository_contacts.py  test_repository_users.py  test_services_email.py
